build button buy and rent use useState

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,6 @@
 @import "../../responsive.scss";
 nav {
-  height: 100px;
+  // height: 100px;
   display: flex;
   justify-content: space-between;
   align-items: center;
