--- a/src/layout.scss
+++ b/src/layout.scss
@@ -6,6 +6,8 @@
   margin-right: auto;
   padding-left: 20px;
   padding-right: 20px;
+  display: flex;
+  flex-direction: column;
 
   @include lg {
     background-color: rgb(247, 210, 196);
@@ -20,5 +22,11 @@
   @include sm {
     background-color: rgb(239, 200, 200);
     max-width: 640px;
+  }
+
+  .content {
+    background: #ffeaea;
+    // height: calc(100vh - 100px); phần nội dung toàn màn hình
+    flex: 1;
   }
 }
