--- a/src/components/slider/slider.scss
+++ b/src/components/slider/slider.scss
@@ -1,3 +1,5 @@
+@import "../../responsive.scss";
+
 .slider {
   width: 100%;
   display: flex;
@@ -9,11 +11,13 @@
     width: 100vw;
     height: 100vh;
     top: 0;
+    height: 100%;
     left: 0;
     background-color: black;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 9999;
 
     .arrow {
       flex: 1;
@@ -23,6 +27,14 @@
 
       img {
         width: 50px;
+
+        @include md {
+          width: 30px;
+        }
+
+        @include sm {
+          width: 20px;
+        }
 
         &.right {
           transform: rotate(180deg);
