--- a/src/router/singlePage/singlePage.scss
+++ b/src/router/singlePage/singlePage.scss
@@ -1,9 +1,17 @@
+@import "../../responsive.scss";
+
 .singlePage {
   display: flex;
   height: 100%;
+  overflow-y: scroll;
+
+  @include md {
+    flex-direction: column;
+  }
 
   .details {
     flex: 3;
+    height: 100%;
 
     .wrapper {
       padding-right: 50px;
@@ -71,10 +79,103 @@
 
   .features {
     flex: 2;
-    background: #fcd5f3;
+    background: #fcf5f3;
+
+    // @include md {
+    //   margin-bottom: 50px;
+    // }
 
     .wrapper {
       padding: 0px 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 20px;
+
+      img {
+        height: 24px;
+        width: 24px;
+      }
+
+      .title {
+        font-size: 18px;
+        font-weight: bold;
+        margin-bottom: 10px;
+      }
+      .feature {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+
+        img {
+          background-color: rgb(254, 205, 81, 0.209);
+        }
+        .featureText {
+          span {
+            font-weight: bold;
+          }
+          p {
+            font-size: 14px;
+          }
+        }
+      }
+
+      .listVertical {
+        display: flex;
+        flex-direction: column;
+        gap: 20px;
+        padding: 20px 10px;
+        background-color: white;
+        border-radius: 10px;
+      }
+
+      .listHorizontal {
+        display: flex;
+        gap: 20px;
+        padding: 20px 10px;
+        align-items: center;
+        justify-content: space-between;
+        background-color: white;
+        border-radius: 10px;
+      }
+
+      .sizes {
+        display: flex;
+        gap: 10px;
+        justify-content: space-between;
+
+        @include lg {
+          font-size: 12px;
+        }
+
+        .size {
+          display: flex;
+          gap: 10px;
+          padding: 10px;
+          background-color: white;
+          border-radius: 5px;
+        }
+      }
+
+      .mapContainer {
+        width: 100%;
+        height: 200px;
+      }
+
+      .buttons {
+        display: flex;
+        justify-content: space-between;
+
+        button {
+          display: flex;
+          align-items: center;
+          gap: 5px;
+          padding: 20px;
+          background-color: white;
+          border-radius: 5px;
+          border: 1px solid #fece51;
+          cursor: pointer;
+        }
+      }
     }
   }
 }
