--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -61,6 +61,47 @@ nav {
       margin: 24px;
     }
 
+    .user {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+
+      img {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        object-fit: cover;
+        margin-right: 20px;
+        z-index: 1000;
+      }
+      span {
+        @include sm {
+          display: none;
+        }
+      }
+
+      .profile {
+        padding: 12px 24px;
+        background-color: #fece51;
+        cursor: pointer;
+        position: relative;
+
+        .notification {
+          top: -8px;
+          right: -8px;
+          position: absolute;
+          width: 24px;
+          height: 24px;
+          color: white;
+          border-radius: 50%;
+          background-color: red;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
+
     .register {
       background-color: #fece51;
     }
