finished base ui

--- a/src/router/profilePage/profilePage.scss
+++ b/src/router/profilePage/profilePage.scss
@@ -1,13 +1,27 @@
+@import "../../responsive.scss";
+
 .profilePage {
   display: flex;
   height: 100%;
 
-  .details {position: fixed;
-    flex: 3;
+  @include md {
+    flex-direction: column;
     overflow-y: scroll;
+  }
+
+  .details {
+    flex: 3;
     padding-bottom: 50px;
+    overflow-y: scroll;
+
+    @include md {
+      flex: none;
+      height: max-content;
+      overflow-y: hidden;
+    }
 
     .wrapper {
+      height: 100%;
       padding-right: 50px;
       display: flex;
       flex-direction: column;
@@ -33,13 +47,6 @@
         flex-direction: column;
         gap: 20px;
 
-        img {
-          width: 40px;
-          height: 40px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
-
         span {
           display: flex;
           align-items: center;
@@ -49,6 +56,13 @@
             font-weight: bold;
           }
         }
+
+        img {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
       }
     }
   }
@@ -56,5 +70,15 @@
     flex: 2;
     background-color: #fcf5f3;
     height: 100%;
+
+    @include md {
+      flex: none;
+      height: max-content;
+    }
+
+    .wrapper {
+      height: 100%;
+      padding: 0px 20px;
+    }
   }
 }
